Had to move env stuff into docker environment