@@ -98,6 +98,7 @@ Remove it if you already made one
 ```
 docker rm sakai-tomcat -f; docker run -d --name=sakai-tomcat -p 8080:8080 \
     -e "CATALINA_BASE=/usr/src/app/deploy" \
+    -e "JAVA_OPTS=-server -d64 -Xms1g -Xmx2g -Djava.awt.headless=true -XX:+UseCompressedOops -XX:+UseConcMarkSweepGC -XX:+DisableExplicitGC -Dhttp.agent=Sakai -Dorg.apache.jasper.compiler.Parser.STRICT_QUOTE_ESCAPING=false” -Dsakai.home=/usr/src/app/deploy/sakai/ -Duser.timezone=US/Eastern -Dsakai.cookieName=SAKAI2SESSIONID -Dsakai.demo=true -Dcom.sun.management.jmxremote -Dcom.sun.management.jmxremote.port=8089 -Dcom.sun.management.jmxremote.local.only=false -Dcom.sun.management.jmxremote.authenticate=false -Dcom.sun.management.jmxremote.ssl=false" \
     -v "${DEPLOY}:/usr/src/app/deploy" \
     -v "${TOMCAT}/sakaihome:/usr/src/app/deploy/sakai" \
     -v "${TOMCAT}/catalina_base/bin:/usr/src/app/deploy/bin" \
